Fix context menus for Mac OS X embedding. Patch written by Stuart Morgan and Josh Aas (yay teamwork). b=425787 r=smichaud sr=vlad